--- a/frontend/package.json
+++ b/frontend/package.json
@@ -27,7 +27,7 @@
     "yup": "^1.7.0"
   },
   "scripts": {
-    "start": "react-scripts start",
+    "start": "PORT=3000 react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
