--- a/frontend/package.json
+++ b/frontend/package.json
@@ -21,13 +21,14 @@
     "react-hook-form": "^7.62.0",
     "react-router-dom": "^7.8.0",
     "react-scripts": "5.0.1",
+    "react-toastify": "^11.0.5",
     "styled-components": "^6.1.19",
     "typescript": "^4.9.5",
     "web-vitals": "^2.1.4",
     "yup": "^1.7.0"
   },
   "scripts": {
-    "start": "PORT=3000 react-scripts start",
+    "start": "set PORT=3000 && react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
